# todo-in-rust

./: .dockerignore  .env  .gitignore  Cargo.toml  Dockerfile  Dockerfile.armv7  README.md  docker-compose.yml
.github/workflow/: main.yml
.github/workflows/: main.yml
migrations/2021-05-10-012114_create_todo/: up.sql
migrations/2021-05-17-005812_done-flag/: down.sql  up.sql
src/: lib.rs  main.rs  models.rs  schema.rs
src/migrations/: V1__initial.rs  mod.rs
