[package]
name = "todo-in-rust-with-tide"
version = "0.1.0"
authors = ["Timm, Christopher <WhiteHatTux@timmch.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tide = "0.16.0"
async-std = { version = "1.8.0", features = ["attributes"] }
serde = { version = "1.0", features = ["derive"] }
rusqlite = { version = "0.23.0", features = ["bundled", "uuid"] }
barrel = { version = "0.6", features = ["sqlite3"] }
uuid = { version = "0.8.2", features = ["serde", "v4"] }
diesel = { version = "1.4.6", features = ["sqlite", "uuidv07", "r2d2"] }
diesel_migrations = "1.4.0"
dotenv = "0.15.0"
ctrlc = "3.1.9"
